--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-import pandas as pd
-import matplotlib.pyplot as plt
-import seaborn as sns
-import streamlit as st
-from babel.numbers import format_currency
+pandas as pd
+matplotlib.pyplot as plt
+seaborn as sns
+streamlit as st
+babel.numbers
 sns.set(style='dark')
+scikit-learn
